--- a/my-app/src/Companents/TopServices/TopServices.css
+++ b/my-app/src/Companents/TopServices/TopServices.css
@@ -15,6 +15,8 @@
     text-align: center;
     font-family: 'Montserrat-Light';
     font-size: 25px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 @media (max-width:1500px) {
     .ts-body h1{
@@ -35,6 +37,28 @@
     
     .ts-body h2{
         font-size: 20px;
+        margin-bottom: 0;
+    }
+}
+@media (max-width:768px) {
+    .ts-body h1{
+        margin-top: 5svh;
+        font-size: 28px;
+    }
+    
+    .ts-body h2{
+        font-size: 19px;
+        margin-bottom: 0;
+    }
+}
+@media (max-width:420px) {
+    .ts-body h1{
+        margin-top: 5svh;
+        font-size: 27px;
+    }
+    
+    .ts-body h2{
+        font-size: 18px;
         margin-bottom: 0;
     }
 }
